src/app/components/dyp/dyp-results/dyp-results.component.scss
@import "../../../../styles.scss";

.dyp-results {
    margin-top: 50px;
}

.mat-card-content {
    margin-left: 1rem;
    margin-right: 1rem;
}

.dyp-title {
    font-weight: bold;
    font-size: $headline-size-2;
    color: $headline;

    &__select {
        width: 8rem;
        text-align: center;
    }
}

::ng-deep .mat-form-field-underline {
    display: none;
}

::ng-deep .mat-option {
    line-height: 2em !important;
    height: 2rem !important;
}

::ng-deep .mat-option-text {
    font-size: 1rem;
    text-align: center;
}

.forecast-icon {
    margin-left: .5rem;

    &--up {
        color: $color-up;
    }

    &--down {
        color: $color-down;
    }

    &--same {
        color: $color-default;
    }
}

.dyp-table {
    width: 100%;

    &__header {
        font-weight: 900;

        &__position {
            text-align: left;
        }
    
        &__name {
            text-align: left;
        }
    
        &__forecast {
            text-align: center;
        }
    
        &__points {
            text-align: center;
        }
    }

    &__item {
        &__position {
            text-align: left;
            font-weight: bold;
        }
    
        &__name {
            text-align: left;
            font-weight: bold;
            line-height: 2rem;
            padding-top: 0.5rem;
            padding-bottom: 0.5rem;
        }
    
        &__forecast {
            text-align: center;
        }
    
        &__points {
            text-align: center;
        }
    }

}

.stats {
    margin-bottom: .5rem;
    margin-top: 1rem;
    text-align: center;

    &__title {
        color: $color-default-light;
        font-size: 0.8rem;
        line-height: 1rem;
        font-weight: bold;
    }

    &__description {
        color: $color-default-light;
        font-size: 0.8rem;
        line-height: 1rem;
    }
}

